--- a/calf/src/index.css
+++ b/calf/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button {
+  font-size: 2rem;
+  width: 60px;
+  border: 2px solid #d6d6d6;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.display {
+  width: 40%;
+  height: 20px;
+  align-self: center;
+  background: lightgray;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.expression {
+  height: 60px;
+  color: rgb(170, 170, 170);
+}
+
+.panel {
+  display: flex;
+  justify-content: center;
+}
+
+.numbers {
+  display: flex;
+  flex-flow: wrap;
+  flex-wrap: wrap;
+  justify-items: stretch;
+  width: 180px;
+}
+
+.numbers button:last-child {
+  width: 200%;
+}
+
+.operators {
+  display: flex;
+  flex-flow: column;
+}
+
+.operators button {
+  color: white;
+  background: #1100fa;
+  border-left: none;
+  border-bottom: 0;
 }
