--- a/calf/src/index.css
+++ b/calf/src/index.css
@@ -50,7 +50,7 @@ button {
 
 .operators button {
   color: white;
-  background: #1100fa;
+  background: #750f1e;
   border-left: none;
   border-bottom: 0;
 }
