--- a/calf/src/style.css
+++ b/calf/src/style.css
@@ -50,7 +50,7 @@ button {
 
 .operators button {
   color: white;
-  background: #1100fa;
+  background: #8e00fa;
   border-left: none;
   border-bottom: 0;
 }
